# Vehicle_Selection

./: DIESEL.csv  PETROL.csv  README.md  RForDatascience.R  Vehicle analysis.R  Vehicle analysis_CarsDatabase.R  docker-compose.yml  spec.md  todo.md
backend/: Dockerfile  README.md  pyproject.toml  seed_db.py
backend/app/: __init__.py  config.py  dataprocessing.py  models.py  routes.py
backend/data/: seed_db.py
