[tool.poetry]
name = "vehicle-selection-be"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "n"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.1.1"
flask-sqlalchemy = "^3.1.1"
psycopg2-binary = "^2.9.10"
pandas = "^2.2.3"
numpy = "^2.2.6"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
